--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
   "arrowParens": "avoid",
+  "trailingComma": "none",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "semi": false,
   "singleQuote": true,
-  "tabWidth": 4,
+  "tabWidth": 2,
   "printWidth": 85,
   "jsxSingleQuote": true
 }
